--- a/style.css
+++ b/style.css
@@ -310,6 +310,7 @@ button:hover {
     align-items: center;
     -ms-flex-pack: center;
     justify-content: center;
+    color: var(--main-bg-color);
 }
 
 .heroTextTop {
